add multiple CB payment

--- a/client-myjss/src/app/modules/my-account/components/order-details/order-details.component.html
+++ b/client-myjss/src/app/modules/my-account/components/order-details/order-details.component.html
@@ -548,7 +548,7 @@
         <div class="text-center pt-1 pt-sm-2">
           <a class="btn btn-sm btn-secondary ms-auto"
             *ngIf="order && order.customerOrderStatus.code ==CUSTOMER_ORDER_STATUS_BILLED" (click)="downloadInvoice()">
-            <i class="ai-cart ms-n1 me-2"></i>
+            <i class="ai-note ms-n1 me-2"></i>
             <span>Télécharger la facture</span>
           </a>
         </div>
