--- a/client-myjss/src/app/modules/my-account/components/billing-closure/billing-closure.component.html
+++ b/client-myjss/src/app/modules/my-account/components/billing-closure/billing-closure.component.html
@@ -93,17 +93,47 @@
             <div class="d-flex justify-content-between mb-2 flex-wrap">
               <div><strong>Date :</strong> {{receiptValue.eventDateTime | date:'dd/MM/yyyy'}}</div>
               <div><strong>Responsable :</strong> {{capitalizeName(getResponsableLabel(receiptValue))}}</div>
-              <div><strong>Service :</strong> {{receiptValue.serviceLists}}</div>
             </div>
 
             <div class="mb-3">
               <strong>Affaire : </strong>
               <span>{{capitalizeName(receiptValue.affaireLists)}}</span>
             </div>
-            <div class="mb-3">
+            <div class="mb-3" *ngIf="!receiptValue.idInvoice && !receiptValue.idCustomerOrder">
               <strong>Description : </strong>
               <span [innerHTML]="receiptValue.eventDescription | trustHtml"></span>
             </div>
+            <div class="mb-3" *ngIf="receiptValue.idInvoice || receiptValue.idCustomerOrder">
+              <strong>Service : </strong>
+              <span [innerHTML]="receiptValue.serviceLists"></span>
+            </div>
+            <div class="d-flex justify-content-end gap-2 pb-2">
+              <a class="btn btn-sm btn-outline-primary  " role="button"
+                [routerLink]="'/account/orders/details/' + receiptValue.idCustomerOrder"
+                *ngIf="receiptValue.idCustomerOrder">
+                <i class="ai-cart me-2"></i>
+                Voir la commande
+              </a>
+
+              <a class="btn btn-sm btn-outline-primary " role="button"
+                (click)="downloadInvoice(receiptValue.idCustomerOrder)"
+                *ngIf="receiptValue.idInvoice && receiptValue.idCustomerOrder">
+                <i class="ai-note me-2"></i>
+                Télécharger la facture
+              </a>
+
+              <a class="btn btn-sm btn-outline-primary " role="button" (click)="addToPayCb(receiptValue)"
+                *ngIf="receiptValue.idCustomerOrder && orderToPayInCb.indexOf(receiptValue.idCustomerOrder)<0">
+                <i class="ai-card me-2"></i>
+                Ajouter au paiement CB
+              </a>
+              <a class="btn btn-sm btn-primary " role="button" (click)="removeFromPayCb(receiptValue)"
+                *ngIf="receiptValue.idCustomerOrder && orderToPayInCb.indexOf(receiptValue.idCustomerOrder)>=0">
+                <i class="ai-check me-2"></i>
+                Retirer du paiement CB
+              </a>
+            </div>
+
 
             <div class="d-flex justify-content-start border-top pt-2" style="gap: 2rem; min-width: 200px;">
               <div style="flex: 1 1 100px;">
@@ -129,34 +159,57 @@
               getTotalSolde(undefined,undefined) | currency:'EUR' }}</span>
           </div>
         </div>
+        <div class="mt-4 p-3 border-top d-flex justify-content-end" style="gap: 3rem; min-width: 200px;"
+          *ngIf="orderToPayInCb.length>0">
+          <div>
+            <a class="btn btn-sm btn-primary " role="button" (click)="payCb()">
+              <i class="ai-check me-2"></i>
+              Payer {{ totalToPayCb | currency:'EUR' }} en CB
+            </a>
+          </div>
+        </div>
       </div>
 
       <ng-container *ngIf="currentSort=='byAffaire'">
         <ng-container *ngFor="let affaire of allAffaires ; let index = index">
-          <h4 class="h6 mb-2 mt-6 pt-3">{{capitalizeName(affaire)}}</h4>
+          <h4 class="h6 mb-2 mt-6 pt-5">{{capitalizeName(affaire)}}</h4>
           <ng-container *ngFor="let receiptValue of receiptValues;">
             <div *ngIf="receiptValue.eventDateTime && receiptValue.affaireLists == affaire" class="card mb-3 shadow-sm">
               <div class="card-body p-3">
                 <div class="d-flex justify-content-between mb-2 flex-wrap">
                   <div><strong>Date :</strong> {{receiptValue.eventDateTime | date:'dd/MM/yyyy'}}</div>
                   <div><strong>Responsable :</strong> {{capitalizeName(getResponsableLabel(receiptValue))}}</div>
-                  <div><strong>Service :</strong> {{receiptValue.serviceLists}}</div>
                 </div>
 
-                <div class="mb-3">
-                  <strong>Description : </strong>
-                  <span [innerHTML]="receiptValue.eventDescription | trustHtml"></span>
+                <div class="mb-3" *ngIf="receiptValue.idInvoice || receiptValue.idCustomerOrder">
+                  <strong>Service : </strong>
+                  <span [innerHTML]="receiptValue.serviceLists"></span>
                 </div>
+                <div class="d-flex justify-content-end gap-2 pb-2">
+                  <a class="btn btn-sm btn-outline-primary  " role="button"
+                    [routerLink]="'/account/orders/details/' + receiptValue.idCustomerOrder"
+                    *ngIf="receiptValue.idCustomerOrder">
+                    <i class="ai-cart me-2"></i>
+                    Voir la commande
+                  </a>
 
-                <div class="d-flex justify-content-start border-top pt-2" style="gap: 2rem; min-width: 200px;">
-                  <div style="flex: 1 1 100px;">
-                    <strong>Débit</strong><br>
-                    <span class="text-danger">{{receiptValue.debitAmount | currency:'EUR'}}</span>
-                  </div>
-                  <div style="flex: 1 1 100px;">
-                    <strong>Crédit</strong><br>
-                    <span class="text-success">{{receiptValue.creditAmount | currency:'EUR'}}</span>
-                  </div>
+                  <a class="btn btn-sm btn-outline-primary " role="button"
+                    (click)="downloadInvoice(receiptValue.idCustomerOrder)"
+                    *ngIf="receiptValue.idInvoice && receiptValue.idCustomerOrder">
+                    <i class="ai-note me-2"></i>
+                    Télécharger la facture
+                  </a>
+
+                  <a class="btn btn-sm btn-outline-primary " role="button" (click)="addToPayCb(receiptValue)"
+                    *ngIf="receiptValue.idCustomerOrder && orderToPayInCb.indexOf(receiptValue.idCustomerOrder)<0">
+                    <i class="ai-card me-2"></i>
+                    Ajouter au paiement CB
+                  </a>
+                  <a class="btn btn-sm btn-primary " role="button" (click)="removeFromPayCb(receiptValue)"
+                    *ngIf="receiptValue.idCustomerOrder && orderToPayInCb.indexOf(receiptValue.idCustomerOrder)>=0">
+                    <i class="ai-check me-2"></i>
+                    Retirer du paiement CB
+                  </a>
                 </div>
               </div>
             </div>
@@ -174,38 +227,57 @@
             </div>
           </div>
         </ng-container>
+        <div class="mt-4 p-3 border-top d-flex justify-content-end" style="gap: 3rem; min-width: 200px;"
+          *ngIf="orderToPayInCb.length>0">
+          <div>
+            <a class="btn btn-sm btn-primary " role="button" (click)="payCb()">
+              <i class="ai-check me-2"></i>
+              Payer {{ totalToPayCb | currency:'EUR' }} en CB
+            </a>
+          </div>
+        </div>
       </ng-container>
 
       <ng-container *ngIf="currentSort=='byResponsable'">
         <ng-container *ngFor="let responsable of allResponsables ; let index = index">
-          <h4 class="h6 mb-2 mt-6">{{capitalizeName(responsable.firstname+' '+responsable.lastname)}}</h4>
+          <h4 class="h6 mb-2 pt-5">{{capitalizeName(responsable.firstname+' '+responsable.lastname)}}</h4>
           <ng-container *ngFor="let receiptValue of receiptValues;">
             <div *ngIf="receiptValue.eventDateTime && receiptValue.responsable.id == responsable.id"
               class="card mb-3 shadow-sm">
               <div class="card-body p-3">
                 <div class="d-flex justify-content-between mb-2 flex-wrap">
                   <div><strong>Date :</strong> {{receiptValue.eventDateTime | date:'dd/MM/yyyy'}}</div>
-                  <div><strong>Service :</strong> {{receiptValue.serviceLists}}</div>
                 </div>
 
-                <div class="mb-3">
-                  <strong>Affaire : </strong>
-                  <span>{{capitalizeName(receiptValue.affaireLists)}}</span>
+                <div class="mb-3" *ngIf="receiptValue.idInvoice || receiptValue.idCustomerOrder">
+                  <strong>Service : </strong>
+                  <span [innerHTML]="receiptValue.serviceLists"></span>
                 </div>
-                <div class="mb-3">
-                  <strong>Description : </strong>
-                  <span [innerHTML]="receiptValue.eventDescription | trustHtml"></span>
-                </div>
+                <div class="d-flex justify-content-end gap-2 pb-2">
+                  <a class="btn btn-sm btn-outline-primary  " role="button"
+                    [routerLink]="'/account/orders/details/' + receiptValue.idCustomerOrder"
+                    *ngIf="receiptValue.idCustomerOrder">
+                    <i class="ai-cart me-2"></i>
+                    Voir la commande
+                  </a>
 
-                <div class="d-flex justify-content-start border-top pt-2" style="gap: 2rem; min-width: 200px;">
-                  <div style="flex: 1 1 100px;">
-                    <strong>Débit</strong><br>
-                    <span class="text-danger">{{receiptValue.debitAmount | currency:'EUR'}}</span>
-                  </div>
-                  <div style="flex: 1 1 100px;">
-                    <strong>Crédit</strong><br>
-                    <span class="text-success">{{receiptValue.creditAmount | currency:'EUR'}}</span>
-                  </div>
+                  <a class="btn btn-sm btn-outline-primary " role="button"
+                    (click)="downloadInvoice(receiptValue.idCustomerOrder)"
+                    *ngIf="receiptValue.idInvoice && receiptValue.idCustomerOrder">
+                    <i class="ai-note me-2"></i>
+                    Télécharger la facture
+                  </a>
+
+                  <a class="btn btn-sm btn-outline-primary " role="button" (click)="addToPayCb(receiptValue)"
+                    *ngIf="receiptValue.idCustomerOrder && orderToPayInCb.indexOf(receiptValue.idCustomerOrder)<0">
+                    <i class="ai-card me-2"></i>
+                    Ajouter au paiement CB
+                  </a>
+                  <a class="btn btn-sm btn-primary " role="button" (click)="removeFromPayCb(receiptValue)"
+                    *ngIf="receiptValue.idCustomerOrder && orderToPayInCb.indexOf(receiptValue.idCustomerOrder)>=0">
+                    <i class="ai-check me-2"></i>
+                    Retirer du paiement CB
+                  </a>
                 </div>
               </div>
             </div>
@@ -223,6 +295,15 @@
             </div>
           </div>
         </ng-container>
+        <div class="mt-4 p-3 border-top d-flex justify-content-end" style="gap: 3rem; min-width: 200px;"
+          *ngIf="orderToPayInCb.length>0">
+          <div>
+            <a class="btn btn-sm btn-primary " role="button" (click)="payCb()">
+              <i class="ai-check me-2"></i>
+              Payer {{ totalToPayCb | currency:'EUR' }} en CB
+            </a>
+          </div>
+        </div>
       </ng-container>
     </div>
   </div>
