--- a/client/src/app/modules/quotation/components/quotation-management/quotation-management.component.html
+++ b/client/src/app/modules/quotation/components/quotation-management/quotation-management.component.html
@@ -106,9 +106,16 @@
                   </td>
                 </tr>
               </table>
-              <addressing [editMode]="editMode" [document]="billingDocument "
-                (documentChange)="updateAdressing($event)"></addressing>
+              <addressing [editMode]="editMode" [document]="billingDocument" (documentChange)="updateAdressing($event)">
+              </addressing>
               <table class="full-width">
+                <tr>
+                  <td>
+                    <single-chips-mail label="Mails" [(model)]="billingDocument.reminderMail"
+                      [form]="quotationManagementForm" propertyName="reminderMail"
+                      label="Adresse mail de relance pour facturation" [isDisabled]="!editMode"></single-chips-mail>
+                  </td>
+                </tr>
                 <tr *ngIf="billingMailComputeResult">
                   <td>
                     <div *ngIf="billingMailComputeResult?.isSendToAffaire">
