--- a/client/src/app/modules/quotation/components/quotation-side-panel-details/quotation-side-panel-details.component.html
+++ b/client/src/app/modules/quotation/components/quotation-side-panel-details/quotation-side-panel-details.component.html
@@ -114,6 +114,14 @@
     </ng-container>
   </mat-accordion>
 </div>
+<div class="custom-panel" style="margin-bottom: 15px; margin-top: 20px;" *ngIf="totalServicesPrice!=0">
+  <div class="field-row">
+    <div class="label">Prix total du devis</div>
+    <div class="value">
+      {{totalServicesPrice | currency:'EUR'}}
+    </div>
+  </div>
+</div>
 <div class="timestamps" *ngIf="selectedEntity">
   <p>Créé le {{selectedEntity.createdDate | date:'EEEE d MMMM HH:mm'}}<br />
     <span *ngIf="selectedEntity.lastStatusUpdate">Mis à jour le {{selectedEntity.lastStatusUpdate | date:'EEEE d MMMM
