--- a/client-myjss/src/app/modules/my-account/components/billing-closure/billing-closure.component.css
+++ b/client-myjss/src/app/modules/my-account/components/billing-closure/billing-closure.component.css
@@ -52,3 +52,14 @@
 .card {
   --ar-card-border-radius: 10px
 }
+
+.fixed-pay-bottom {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: white;
+  z-index: 1100;
+  padding: 1rem;
+  box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.05);
+}
