--- a/client-myjss/src/app/modules/my-account/components/billing-closure/billing-closure.component.html
+++ b/client-myjss/src/app/modules/my-account/components/billing-closure/billing-closure.component.html
@@ -159,8 +159,8 @@
               getTotalSolde(undefined,undefined) | currency:'EUR' }}</span>
           </div>
         </div>
-        <div class="mt-4 p-3 border-top d-flex justify-content-end" style="gap: 3rem; min-width: 200px;"
-          *ngIf="orderToPayInCb.length>0">
+        <div class="mt-4 p-3 border-top d-flex justify-content-end fixed-pay-bottom"
+          style="gap: 3rem; min-width: 200px;" *ngIf="orderToPayInCb.length>0">
           <div>
             <a class="btn btn-sm btn-primary " role="button" (click)="payCb()">
               <i class="ai-check me-2"></i>
@@ -227,8 +227,8 @@
             </div>
           </div>
         </ng-container>
-        <div class="mt-4 p-3 border-top d-flex justify-content-end" style="gap: 3rem; min-width: 200px;"
-          *ngIf="orderToPayInCb.length>0">
+        <div class="mt-4 p-3 border-top d-flex justify-content-end fixed-pay-bottom"
+          style="gap: 3rem; min-width: 200px;" *ngIf="orderToPayInCb.length>0">
           <div>
             <a class="btn btn-sm btn-primary " role="button" (click)="payCb()">
               <i class="ai-check me-2"></i>
@@ -295,8 +295,8 @@
             </div>
           </div>
         </ng-container>
-        <div class="mt-4 p-3 border-top d-flex justify-content-end" style="gap: 3rem; min-width: 200px;"
-          *ngIf="orderToPayInCb.length>0">
+        <div class="mt-4 p-3 border-top d-flex justify-content-end fixed-pay-bottom"
+          style="gap: 3rem; min-width: 200px;" *ngIf="orderToPayInCb.length>0">
           <div>
             <a class="btn btn-sm btn-primary " role="button" (click)="payCb()">
               <i class="ai-check me-2"></i>
