--- a/client-myjss/src/app/modules/my-account/components/orders/orders.component.html
+++ b/client-myjss/src/app/modules/my-account/components/orders/orders.component.html
@@ -256,7 +256,7 @@
 
                       <!-- Bloc : Bouton avis -->
                       <div class="col-sm-6 col-lg-3 text-sm-end align-self-start"
-                        *ngIf="order.customerOrderStatus.code === CUSTOMER_ORDER_STATUS_BILLED">
+                        *ngIf="order.customerOrderStatus.code === CUSTOMER_ORDER_STATUS_BILLED  && false">
                         <button class="btn btn-sm btn-outline-primary w-100 w-sm-auto" type="button">
                           <i class="ai-star me-2 ms-n1"></i>Laisser un avis
                         </button>
