--- a/client-myjss/src/app/modules/company/components/join-us/join-us.component.css
+++ b/client-myjss/src/app/modules/company/components/join-us/join-us.component.css
@@ -2,7 +2,7 @@ swiper-container {
   width: 100%;
   height: 20vh;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
 }
 
 @media (min-width: 768px) {
@@ -23,4 +23,8 @@ swiper-container {
 
 generic-input, generic-textarea {
   border: none;
+}
+
+.modal-header {
+  display: block !important;
 }
