--- a/client-myjss/src/app/modules/profile/components/top-bar/top-bar.component.html
+++ b/client-myjss/src/app/modules/profile/components/top-bar/top-bar.component.html
@@ -131,7 +131,7 @@
                 (click)="attempToCloseNavbar(true,null)">Contact</a>
             </li>
             <li class="nav-item col col-md-auto">
-              <a class="nav-link " style="cursor: pointer;" (click)="$event">Journal Spécial des
+              <a class="nav-link " style="cursor: pointer;" (click)="openJssRoute($event)">Journal Spécial des
                 Sociétés</a>
             </li>
           </ul>
