--- a/client-myjss/src/app/modules/quotation/components/required-information/required-information.component.html
+++ b/client-myjss/src/app/modules/quotation/components/required-information/required-information.component.html
@@ -134,7 +134,7 @@
                     <div class="col mb-3 align-items-start" *ngIf="departments">
                       <select-department [(model)]="provision.announcement.department"
                         label="Département de publication" [form]="informationForm"
-                        [propertyName]="'department'+provision.order" [isMandatory]="false"
+                        [propertyName]="'department'+provision.order" [isMandatory]="true"
                         [isDisabled]="false"></select-department>
                     </div>
 
@@ -142,7 +142,7 @@
                     <div class="col mb-3 align-items-start" *ngIf="noticeTypeFamilies">
                       <select-notice-type-family [(model)]="provision.announcement.noticeTypeFamily"
                         label="Rubrique de publication" [form]="informationForm"
-                        [propertyName]="'noticeTypeFamily'+provision.order" [isMandatory]="false"
+                        [propertyName]="'noticeTypeFamily'+provision.order" [isMandatory]="true"
                         [isDisabled]="false"></select-notice-type-family>
                     </div>
 
@@ -152,7 +152,7 @@
                       <select-multiple-notice-type [(model)]="provision.announcement.noticeTypes"
                         label="Sous-rubrique(s) de publication" [form]="informationForm"
                         [noticeTypeFamily]="provision.announcement.noticeTypeFamily"
-                        [propertyName]="'noticeTypes'+provision.order" [isMandatory]="false"
+                        [propertyName]="'noticeTypes'+provision.order" [isMandatory]="true"
                         [isDisabled]="false"></select-multiple-notice-type>
                     </div>
                   </div>
@@ -507,60 +507,70 @@
                     *ngIf="quotation.assoAffaireOrders[selectedAssoIndex].services[selectedServiceIndex].assoServiceFieldTypes.length ==0">Aucune
                     information à remplir pour ce service, vous pouvez cliquer sur le bouton étape suivante.</span>
                   <ng-container
-                    *ngFor="let assoServiceFieldType of quotation.assoAffaireOrders[selectedAssoIndex].services[selectedServiceIndex].assoServiceFieldTypes; let i = index">
-                    <ng-container *ngIf="isDisplayDependantField(assoServiceFieldType)">
-                      <!-- TEXT -->
-                      <div class="col-12 col-md-6 col-lg-4"
-                        *ngIf="assoServiceFieldType.serviceFieldType.dataType == SERVICE_FIELD_TYPE_TEXT">
-                        <generic-input [(model)]="assoServiceFieldType.stringValue"
-                          [label]="assoServiceFieldType.serviceFieldType.label+(assoServiceFieldType.isMandatory?'*':'')"
-                          [form]="informationForm" [propertyName]="'stringFieldType'+i"
-                          [isMandatory]="assoServiceFieldType.isMandatory" [maxLength]="255">
-                        </generic-input>
-                      </div>
+                    *ngFor="let serviceType of quotation.assoAffaireOrders[selectedAssoIndex].services[selectedServiceIndex].serviceTypes;let serviceTypeIndex = index">
+                    <h6 class="mb-0" [ngClass]="{'mt-5':serviceTypeIndex>0}"
+                      *ngIf="quotation.assoAffaireOrders[selectedAssoIndex].services[selectedServiceIndex].serviceTypes.length>1 &&  serviceType.assoServiceTypeFieldTypes.length>0">
+                      {{serviceType.label}}
+                    </h6>
+                    <ng-container *ngFor="let assoFieldOfServiceType of serviceType.assoServiceTypeFieldTypes">
+                      <ng-container
+                        *ngFor="let assoServiceFieldType of quotation.assoAffaireOrders[selectedAssoIndex].services[selectedServiceIndex].assoServiceFieldTypes; let i = index">
+                        <ng-container
+                          *ngIf="isDisplayDependantField(assoServiceFieldType) && assoFieldOfServiceType.serviceFieldType.id==assoServiceFieldType.serviceFieldType.id">
+                          <!-- TEXT -->
+                          <div class="col-12 col-md-6 col-lg-4"
+                            *ngIf="assoServiceFieldType.serviceFieldType.dataType == SERVICE_FIELD_TYPE_TEXT">
+                            <generic-input [(model)]="assoServiceFieldType.stringValue"
+                              [label]="assoServiceFieldType.serviceFieldType.label+(assoServiceFieldType.isMandatory?'*':'')"
+                              [form]="informationForm" [propertyName]="'stringFieldType'+i"
+                              [isMandatory]="assoServiceFieldType.isMandatory" [maxLength]="255">
+                            </generic-input>
+                          </div>
 
-                      <!-- TEXTAREA -->
-                      <div class="col-12 "
-                        *ngIf="assoServiceFieldType.serviceFieldType.dataType == SERVICE_FIELD_TYPE_TEXTAREA">
-                        <generic-textarea [(model)]="assoServiceFieldType.textAreaValue"
-                          [label]="assoServiceFieldType.serviceFieldType.label+(assoServiceFieldType.isMandatory?'*':'')"
-                          [form]="informationForm" [maxLength]="255" [propertyName]="'textAreaFieldType'+i"
-                          [isMandatory]="assoServiceFieldType.isMandatory">
-                        </generic-textarea>
-                      </div>
+                          <!-- TEXTAREA -->
+                          <div class="col-12 "
+                            *ngIf="assoServiceFieldType.serviceFieldType.dataType == SERVICE_FIELD_TYPE_TEXTAREA">
+                            <generic-textarea [(model)]="assoServiceFieldType.textAreaValue"
+                              [label]="assoServiceFieldType.serviceFieldType.label+(assoServiceFieldType.isMandatory?'*':'')"
+                              [form]="informationForm" [maxLength]="255" [propertyName]="'textAreaFieldType'+i"
+                              [isMandatory]="assoServiceFieldType.isMandatory">
+                            </generic-textarea>
+                          </div>
 
-                      <!-- DATE -->
-                      <div class="col-12 col-md-6 col-lg-4"
-                        *ngIf="assoServiceFieldType.serviceFieldType.dataType == SERVICE_FIELD_TYPE_DATE">
-                        <div class="form-group w-auto">
-                          <generic-date-picker [(model)]="assoServiceFieldType.dateValue"
-                            [label]="assoServiceFieldType.serviceFieldType.label+(assoServiceFieldType.isMandatory?'*':'')"
-                            [form]="informationForm" [propertyName]="'dateFieldType'+i"
-                            [isMandatory]="assoServiceFieldType.isMandatory">
-                          </generic-date-picker>
-                        </div>
-                      </div>
+                          <!-- DATE -->
+                          <div class="col-12 col-md-6 col-lg-4"
+                            *ngIf="assoServiceFieldType.serviceFieldType.dataType == SERVICE_FIELD_TYPE_DATE">
+                            <div class="form-group w-auto">
+                              <generic-date-picker [(model)]="assoServiceFieldType.dateValue"
+                                [label]="assoServiceFieldType.serviceFieldType.label+(assoServiceFieldType.isMandatory?'*':'')"
+                                [form]="informationForm" [propertyName]="'dateFieldType'+i"
+                                [isMandatory]="assoServiceFieldType.isMandatory">
+                              </generic-date-picker>
+                            </div>
+                          </div>
 
-                      <!-- INTEGER -->
-                      <div class="col-12 col-md-6 col-lg-4"
-                        *ngIf="assoServiceFieldType.serviceFieldType.dataType == SERVICE_FIELD_TYPE_INTEGER">
-                        <generic-input [(model)]="assoServiceFieldType.integerValue"
-                          [label]="assoServiceFieldType.serviceFieldType.label+(assoServiceFieldType.isMandatory?'*':'')"
-                          [form]="informationForm" [propertyName]="'integerFieldType'+i"
-                          [isMandatory]="assoServiceFieldType.isMandatory" type="number">
-                        </generic-input>
-                      </div>
+                          <!-- INTEGER -->
+                          <div class="col-12 col-md-6 col-lg-4"
+                            *ngIf="assoServiceFieldType.serviceFieldType.dataType == SERVICE_FIELD_TYPE_INTEGER">
+                            <generic-input [(model)]="assoServiceFieldType.integerValue"
+                              [label]="assoServiceFieldType.serviceFieldType.label+(assoServiceFieldType.isMandatory?'*':'')"
+                              [form]="informationForm" [propertyName]="'integerFieldType'+i"
+                              [isMandatory]="assoServiceFieldType.isMandatory" type="number">
+                            </generic-input>
+                          </div>
 
-                      <!-- SELECT -->
-                      <div class="col-12 col-md-6 col-lg-4"
-                        *ngIf="assoServiceFieldType.serviceFieldType.dataType == SERVICE_FIELD_TYPE_SELECT">
-                        <select-value-service-field-type [(model)]="assoServiceFieldType.selectValue"
-                          [label]="assoServiceFieldType.serviceFieldType.label+(assoServiceFieldType.isMandatory?'*':'')"
-                          [form]="informationForm" [propertyName]="'selectFieldType'+i"
-                          [serviceFieldType]="assoServiceFieldType.serviceFieldType"
-                          [isMandatory]="assoServiceFieldType.isMandatory">
-                        </select-value-service-field-type>
-                      </div>
+                          <!-- SELECT -->
+                          <div class="col-12 col-md-6 col-lg-4"
+                            *ngIf="assoServiceFieldType.serviceFieldType.dataType == SERVICE_FIELD_TYPE_SELECT">
+                            <select-value-service-field-type [(model)]="assoServiceFieldType.selectValue"
+                              [label]="assoServiceFieldType.serviceFieldType.label+(assoServiceFieldType.isMandatory?'*':'')"
+                              [form]="informationForm" [propertyName]="'selectFieldType'+i"
+                              [serviceFieldType]="assoServiceFieldType.serviceFieldType"
+                              [isMandatory]="assoServiceFieldType.isMandatory">
+                            </select-value-service-field-type>
+                          </div>
+                        </ng-container>
+                      </ng-container>
                     </ng-container>
                   </ng-container>
                 </div>
